# nmem

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  TESTING.md  docker-compose.yml  nmem.example.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: api-reference.md  concepts.md  configuration.md  independent-benchmarks.md  mcp-integration.md  mental-model.md  profiles.md  quickstart.md
docs/benchmarks/: README.md  healthcare-360d-v2.md  healthcare-multi-agent.md  healthcare-search-optimization.md  recognition-signals.md  spwig-institutional-knowledge.md
docs/design/: symbolic-cognition-critique.md  symbolic-cognition.md
docs/i18n/de/: README.md  benchmarks.md  concepts.md  healthcare-multi-agent.md  mcp-integration.md  quickstart.md
docs/i18n/es/: README.md  benchmarks.md  concepts.md  healthcare-multi-agent.md  mcp-integration.md  quickstart.md
docs/i18n/fr/: README.md  benchmarks.md  concepts.md  healthcare-multi-agent.md  mcp-integration.md  quickstart.md
docs/i18n/ja/: README.md  benchmarks.md  concepts.md  healthcare-multi-agent.md  mcp-integration.md  quickstart.md
docs/i18n/ko/: README.md  benchmarks.md  concepts.md  healthcare-multi-agent.md  mcp-integration.md  quickstart.md
docs/i18n/pt/: README.md  benchmarks.md  concepts.md  healthcare-multi-agent.md  mcp-integration.md  (+1 more)
examples/: multi_agent.py  quickstart.py
scripts/: ci-local.sh  setup_pgvector.py
src/nmem/: __init__.py  cognitive.py  compression.py  config.py  conflicts.py  consolidation.py  exceptions.py  importance.py  links.py  memory.py  profiles.py  prompt.py  search.py  token_stats.py  types.py
tests/: conftest.py  test_config.py  test_embedding_lifecycle.py  test_hooks.py  test_import_lifecycle.py  test_importance.py  test_progressive_disclosure.py  test_search.py
tests/integration/: test_conflict_flow.py  test_grounding_update_flow.py  test_migrations.py  test_postgres.py  test_real_models.py
tests/test_api/: conftest.py  test_admin_and_errors.py  test_health_and_stats.py  test_journal.py  test_ltm_and_shared.py  test_search_and_context.py
tests/test_cli/: conftest.py  test_consolidate.py  test_demo.py  test_init.py  test_search.py  test_stats.py
tests/test_importers/: test_chatgpt.py  test_claude_code.py  test_jsonl.py  test_markdown.py
tests/test_mcp/: test_memory_check_conflicts.py  test_memory_mark_grounding.py  test_memory_search_policy_tier.py  test_memory_write_entity.py  test_memory_write_policy.py  test_server.py
tests/test_tiers/: test_journal.py  test_ltm.py  test_working.py
(+73 files in other folders)
