[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nmem"
version = "0.1.0"
description = "Cognitive memory for AI agents — hierarchical, self-refining, and framework-agnostic"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Dayyan James", email = "dayyan@spwig.com" },
]
keywords = [
    "ai", "agents", "memory", "cognitive", "llm",
    "hierarchical-memory", "vector-search", "agent-memory",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "sqlalchemy[asyncio]>=2.0.30",
    "numpy>=1.24",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
nmem = "nmem.cli.main:app"
nmem-mcp = "nmem.mcp.server:main"

[project.urls]
Homepage = "https://github.com/dayyanj/nmem"
Documentation = "https://github.com/dayyanj/nmem#readme"
Repository = "https://github.com/dayyanj/nmem"
Issues = "https://github.com/dayyanj/nmem/issues"

[project.optional-dependencies]
postgres = ["asyncpg>=0.29", "pgvector>=0.3"]
sqlite = ["aiosqlite>=0.19"]
st = ["sentence-transformers>=3.0"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30,<1"]
langchain = ["langchain-core>=0.3,<1"]
crewai = ["crewai>=0.50,<1"]
cli = ["typer>=0.12,<1", "rich>=13.0", "tqdm>=4.60"]
mcp-server = ["mcp>=1.0,<2"]
all = [
    "nmem[postgres,sqlite,st,openai,anthropic,langchain,crewai,cli,mcp-server]",
]
dev = [
    "nmem[all]",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nmem"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring PostgreSQL (deselect with '-m \"not integration\"')",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
